--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/rentshare
+    url: jdbc:mysql://localhost:3306/rentshare?useSSL=false
     username: root
     password: root
   jpa:
