--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jwt.secret=secretrentshareapp
-spring.datasource.url=jdbc:mysql://localhost/rentshare?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/rentshare?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.platform=mysql
